[package]
name = "circuit-simulator-wasm"
version = "0.1.0"
authors = ["kazukiyoshida"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "circuit_simulator_wasm"
crate-type = ["cdylib"]

[dependencies.circuit-simulator]
path = "../"

[dependencies.avr-emulator]
path = "../../avr-emulator"

[dependencies.web-sys]
version = "0.3.36"
features = [ "console" ]

[dependencies]
wasm-bindgen = "0.2"
downcast-rs = "1.1.1"
